--- a/yealth-ui/yealth/src/App.css
+++ b/yealth-ui/yealth/src/App.css
@@ -19,7 +19,8 @@
 }
 
 toolbar_style {
-  background: rgba(125,255,125, .3),
+  background: rgba(125,255,125, .12);
+  box-shadow: 0px 5px 5px #888888;
 };
 
 
