--- a/yealth-ui/yealth/src/index.css
+++ b/yealth-ui/yealth/src/index.css
@@ -1,6 +1,14 @@
 body {
-  /* background-color: black; */
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  background-color: lightgray;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+svg {
+  display: block;
+  margin: auto;
 }
